# 2RL

./: .gitignore  Codex_Log.md  Codex_Log_zh.md  README.md  README_zh.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  rl_locomotion_moe_research_plan.md
configs/moe/: contrastive_moe.yaml  safety_moe.yaml  vanilla_moe.yaml
configs/robot/: anymal.yaml  unitree_a1.yaml  unitree_g1.yaml  unitree_go2.yaml
configs/terrain/: flat.yaml  gaps.yaml  mixed.yaml  rough.yaml  stairs.yaml
configs/train/: ppo_flat.yaml  ppo_gap.yaml  ppo_gate.yaml  ppo_recovery.yaml  ppo_rough.yaml  ppo_stair.yaml
docs/: code_organization.md  code_organization_zh.md  project_index.md  project_index_zh.md  project_structure.md  project_structure_zh.md
docs/future_work/: claim_boundary.md  claim_boundary_zh.md
docs/paper_notes/: README.md  README_zh.md  integrated_literature_review.md  integrated_literature_review_zh.md
docs/references/: README.md  README_zh.md  external_repos.md  external_repos_zh.md  paper_index.md  paper_index_zh.md  reading_queue.md  reading_queue_zh.md  recommended_reading_order_zh.md
experiments/: README.md  README_zh.md
safe_moe_locomotion/: __init__.py
scripts/: check_system.sh  download_papers.py  evaluate_all.sh  export_policy.sh  extract_paper_text.py  generate_chinese_docs.py  generate_paper_notes.py  git_local.sh  run_tests.sh  train_flat_expert.sh  train_gap_expert.sh  train_gate.sh  train_recovery_expert.sh  train_rough_expert.sh  train_stair_expert.sh  validate_project.py
tests/: test_scaffold.py
(+127 files in other folders)
